# krylov

./: CMakeLists.txt
include/: boundary_conds.hpp  constants.hpp  matrix.hpp  mesh.hpp  solver.hpp  space_disc.hpp  time_disc.hpp
scripts/: prob1.py
src/: bindpy.cpp  mesh.cpp  test.cpp
